Rename module `:example-viewbinding` to `:example`

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Validate Gradle Wrapper
       uses: gradle/wrapper-validation-action@v1
 
-    - name: Build Example App - ViewBinding
-      run: ./gradlew :example-viewbinding:assembleRelease
+    - name: Build Example App
+      run: ./gradlew :example:assembleRelease
 
     - name: Run Lint
       run: ./gradlew lint --console plain
