--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,6 @@ minSdk = "14"
 
 kotlin = "1.9.10"
 gradle-plugin = "8.1.2"
-androidx-lifecycle = "2.4.1"
 
 [libraries]
 # buildscript.dependencies
@@ -17,7 +16,7 @@ androidx-annotation = "androidx.annotation:annotation:1.7.0"
 androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
 androidx-cardview = "androidx.cardview:cardview:1.0.0"
 androidx-core-ktx = "androidx.core:core-ktx:1.7.0"
-androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 androidx-preference = "androidx.preference:preference-ktx:1.2.0"
 androidx-recyclerview = "androidx.recyclerview:recyclerview:1.2.1"
 androidx-vectordrawable-animated = "androidx.vectordrawable:vectordrawable-animated:1.1.0"
