--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Build Example Apps and Run Tests
+name: Run Tests, Build App, Publish Library
 
 on:
   push:
@@ -20,10 +20,13 @@ jobs:
     - name: Validate Gradle Wrapper
       uses: gradle/wrapper-validation-action@v1
 
-    - name: Build Example App
-      run: ./gradlew :example:assembleRelease
-
     - name: Run Lint
       run: ./gradlew lint --console plain
     - name: Run Unit Tests
       run: ./gradlew test --console plain
+
+    - name: Publish Library
+      run: ./gradlew :library:publish --info
+
+    - name: Build Example App
+      run: ./gradlew :example:assembleRelease
